@@ -126,8 +126,6 @@ along with GNU Emacs.  If not, see <http://www.gnu.org/licenses/>.  */
 #define TERMINFO
 
 #define HAVE_SOCKETS
-/* C-g aborts emacs without this */
-/*#define HAVE_VFORK*/
 /* Xaw3d causes problems -- might have been fixed by NARROWPROTO
    above, but I haven't tried it */
 /*#undef HAVE_XAW3D*/
