@@ -25,8 +25,6 @@ along with GNU Emacs.  If not, see <http://www.gnu.org/licenses/>.  */
 
 #define BSD4_2
 /* BSD4_3 and BSD4_4 are already defined in sys/param.h */
-/* #define BSD4_3 */
-/* #define BSD4_4 */
 #define BSD_SYSTEM
 /* #define VMS */
 
@@ -45,12 +43,6 @@ along with GNU Emacs.  If not, see <http://www.gnu.org/licenses/>.  */
  It sets the Lisp variable system-type.  */
 
 #define SYSTEM_TYPE "darwin"
-
-/* NOMULTIPLEJOBS should be defined if your system's shell
- does not have "job control" (the ability to stop a program,
- run some other program, then continue the first one).  */
-
-/* #define NOMULTIPLEJOBS */
 
 /* Emacs can read input using SIGIO and buffering characters itself,
    or using CBREAK mode and making C-g cause SIGINT.
@@ -111,13 +103,6 @@ along with GNU Emacs.  If not, see <http://www.gnu.org/licenses/>.  */
  */
 #define MIN_PTY_KERNEL_VERSION '7'
 
-/*
- *	Define NONSYSTEM_DIR_LIBRARY to make Emacs emulate
- *      The 4.2 opendir, etc., library functions.
- */
-
-/* #define NONSYSTEM_DIR_LIBRARY */
-
 /* Define this symbol if your system has the functions bcopy, etc. */
 
 #define BSTRING
@@ -129,11 +114,6 @@ along with GNU Emacs.  If not, see <http://www.gnu.org/licenses/>.  */
    under most USG systems. */
 
 #define subprocesses
-
-/* If your system uses COFF (Common Object File Format) then define the
-   preprocessor symbol "COFF". */
-
-/* #define COFF */
 
 /* define MAIL_USE_FLOCK if the mailer uses flock
    to interlock access to /usr/spool/mail/$USER.
@@ -148,22 +128,6 @@ along with GNU Emacs.  If not, see <http://www.gnu.org/licenses/>.  */
 
 #define CLASH_DETECTION
 
-/* Define this if your operating system declares signal handlers to
-   have a type other than the usual.  `The usual' is `void' for ANSI C
-   systems (i.e. when the __STDC__ macro is defined), and `int' for
-   pre-ANSI systems.  If you're using GCC on an older system, __STDC__
-   will be defined, but the system's include files will still say that
-   signal returns int or whatever; in situations like that, define
-   this to be what the system's include files want.  */
-/* #define SIGTYPE int */
-
-/* If the character used to separate elements of the executable path
-   is not ':', #define this to be the appropriate character constant.  */
-/* #define SEPCHAR ':' */
-
-/* Define this if the system can use mmap for buffer text allocation.  */
-/* #define USE_MMAP_FOR_BUFFERS 1 */
-
 /* ============================================================ */
 
 /* Here, add any special hacks needed
@@ -172,21 +136,6 @@ along with GNU Emacs.  If not, see <http://www.gnu.org/licenses/>.  */
    exist on your system, or that do different things on
    your system and must be used only through an encapsulation
    (Which you should place, by convention, in sysdep.c).  */
-
-/* Some compilers tend to put everything declared static
-   into the initialized data area, which becomes pure after dumping Emacs.
-   On these systems, you must #define static as nothing to foil this.
-   Note that emacs carefully avoids static vars inside functions.  */
-
-/* #define static */
-
-/* If the system's imake configuration file defines `NeedWidePrototypes'
-   as `NO', we must define NARROWPROTO manually.  Such a define is
-   generated in the Makefile generated by `xmkmf'.  If we don't
-   define NARROWPROTO, we will see the wrong function prototypes
-   for X functions taking float or double parameters.  */
-
-/*  #define NARROWPROTO 1 */
 
 /* ============================================================ */
 
